--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,47 @@
-/* Element styles */
-
-body {
+html, body {
+  --fancyColor: rgb(192, 252, 20);
   background-color: #000000;
   margin: 0px;
   padding: 0px;
 }
-
-h1 {
-  text-align: center;
-  color: #ffffff;
+img{
+  max-width: 100%;
+  max-height: auto;
+}
+.name {
   position: absolute;
-  top: 50%;
+  top: 5%;
+  left: 5%;
+  color: #ffffff;
+}
+.grid_container {
+  display: grid;
+  grid-template-columns: auto auto;
+  width: 80vw;
+  margin-left: 10vw;
+}
+.grid_item {
+  width: 30vw;
+  height: auto;
+}
+.grid_item_title {
+  text-align: center;
+}
+
+::-webkit-scrollbar {
+  width: 1vw;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0.25vw grey;
+  border-radius: 0.5vw;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--fancyColor);
+  border-radius: 0.5vw;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--fancyColor);
 }
