--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 body {
-  background-color: rgb(0, 0, 0);
-  margin: 0;
-  padding: 0;
+  --body_color: rgb(0, 0, 0);
   --fancy_color: rgb(252, 226, 20);
+  --grid_margin: calc(8 * var(--grid_border_width));
   --grid_width: 60vw;
   --grid_border_width: calc(0.003 * var(--grid_width));
   --fontColor: rgb(251, 251, 251);
+  background-color: var(--body_color);
+  margin: 0;
+  padding: 0;
 }
 img {
   max-width: 100%;
@@ -14,28 +16,49 @@ img {
 h1, p {
   color: var(--fontColor);
 }
+a {
+  text-decoration: none;
+}
 .name {
   margin-top: 10vh;
   margin-bottom: 10vh;
-  text-align: center;
+  margin-left: calc((100vw - var(--grid_width)) / 2);
+  text-align: left;
+  font-size: calc(0.06 * var(--grid_width));
 }
 .grid_container {
   display: grid;
   grid-template-columns: auto auto;
-  width: var(--grid_width);
+  width: calc(var(--grid_width) + 4*calc(2 * var(--grid_border_width)));
   margin-right: 0;
   margin-left: calc((100vw - var(--grid_width)) / 2);
-  border: var(--grid_border_width) solid var(--fancy_color);
+  /* border: var(--grid_border_width) solid var(--fancy_color); */
 }
 .grid_item {
   width: calc(0.5 * (var(--grid_width) - 4 * var(--grid_border_width)));
   height: auto;
   border: var(--grid_border_width) solid var(--fancy_color);
+  margin: var(--grid_margin);
   /* display: flex; */
 }
 .grid_item_title {
   text-align: center;
-  font-size: 2vw;
+  font-size: calc(0.05 * var(--grid_width));
+}
+.button {
+  font-size: calc(0.04 * var(--grid_width));
+  margin-top: calc(0.01 * var(--grid_width));
+  background-color: var(--body_color);
+  border-color: var(--fancy_color);
+}
+.button:hover {
+  background-color: var(--fancy_color);
+}
+.codeButton {
+  margin-left: calc(0.03 * var(--grid_width));
+}
+.deployButton {
+  margin-left: calc(0.15 * var(--grid_width));
 }
 
 ::-webkit-scrollbar {
