--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,18 @@ h1, p {
   text-decoration: none;
   color: var(--font_color);
 }
+.header {
+  width: 99vw;
+  height: 40vh;
+  background-image:  linear-gradient(rgb(147, 147, 147), var(--body_color));
+}
 .name {
-  margin-top: 10vh;
-  margin-bottom: 10vh;
-  margin-left: calc((100vw - var(--grid_width)) / 2);
+  position:absolute;
+  margin: 0;
+  color: var(--font_color);
+  margin-top: 10%;
+  /* margin-bottom: 10vh; */
+  margin-left: calc((100vw - var(--grid_width)) / 3);
   text-align: left;
   font-size: calc(0.06 * var(--grid_width));
 }
