--- a/css/master.css
+++ b/css/master.css
@@ -1,15 +1,25 @@
-body {
+:root {
+  --BackgroundColor: rgb(0, 0, 0);
   --FontColor: rgb(255, 255, 255);
   --FancyColor: rgb(73, 201, 35);
   --HighlightColor: rgb(230, 197, 26);
-  --backgroundColor: rgb(0, 0, 0);
+  scroll-behavior: smooth;
+}
+
+html {
   --NavSeparatorWidth: 0.5vw;
+  --ArticleWidth: 60vw;
+}
+a {
+  text-decoration: none;
+  color: var(--FancyColor);
 }
 .navbar {
-  /* border: 5px solid var(--FancyColor); */
-  /* border-radius: 15px; */
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
   text-align: center;
-  background-color: var(--backgroundColor);
+  background-color: var(--BackgroundColor);
 }
 .navbar-item {
   text-decoration: none;
@@ -19,7 +29,10 @@ body {
   margin-bottom: 0.5vw;
   display: inline-block;
 }
-.navbar-item:hover {
+/* .navbar-item:hover {
+  color: var(--HighlightColor);
+} */
+.navbar-item:focus {
   color: var(--HighlightColor);
 }
 .vertical-bar {
@@ -36,30 +49,19 @@ body {
   display: inline-block;
   margin: 0;
 }
-.info {
-  background-color: var(--backgroundColor);
-  color: var(--FontColor);
-  width: 80vw;
-  margin-left: 10vw;
-  text-align: center;
-}
-.myname {
-  font-size: 6.5vw;
-  margin-top: 30vh;
-}
-.myrol {
-  font-size: 3vw;
-  margin-top: 0vh;
-}
 .credentials {
-  width: 20vw;
-  position: absolute;
+  /* display: none; */
+  width: 20vw; /*var(--ArticleWidth);*/
+  /* position: -webkit-sticky;
+  position: sticky; */
+  position: fixed;
   bottom: 2vh;
-  left: 40vw;
+  margin-left: 40vw;
+  /* margin-left: calc( (100vw - var(--ArticleWidth)) / 2); */
 }
 .credentials-content {
   text-align: center;
-  background-color: var(--backgroundColor);
+  background-color: var(--BackgroundColor);
   color: var(--FontColor);
   font-size: 1vw;
 }
@@ -69,30 +71,29 @@ body {
   display: inline-block;
   font-family: monospace;
 }
-.mylogo {
-  position: absolute;
-  width: 10vw;
-  height: 6vw;
-  margin-right: 0vw;
-  background-color: rgb(126, 126, 126);
-  display: inline;
-  /* font-size: 2em; */
+/* Scroll bar */
+::-webkit-scrollbar {
+  width: 1vw;
+  background-color: var(--BackgroundColor);
 }
-.my-initials {
-  /* position: relative; */
-  width: 20px;
-  height: 30px;
-  display: inline;
-  color: rgb(255, 255, 255);
-  margin: 0;
-  margin-top: -10%;
-  font-size: 3em;
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0.25vw grey;
+  border-radius: 0.5vw;
 }
-#letter_S {
-  /* margin-left: 5%; */
+::-webkit-scrollbar-thumb {
+  background: var(--FancyColor);
+  border-radius: 0.5vw;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--FancyColor);
+}
 
-}
-#letter_R {
-  margin-left: 18%;
-
+/* Adjust display for mobile */
+@media only screen and (max-width: 768px) {
+  .navbar {
+    padding: 0;
+  }
+  .navbar-item {
+    font-size: 3.5vw;
+  }
 }
