--- a/css/home.css
+++ b/css/home.css
@@ -17,6 +17,21 @@ html {
   font-size: 3vw;
   margin-top: 0vh;
 }
+.name-character {
+  display: inline;
+  margin: -.7vw;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s, font-size 0.5s;
+  transition-delay: 0.05s;
+}
+.name-character:hover {
+  /* font-size: 7vw; */
+  color: var(--RandomColor);
+}
+.spacer {
+  display: inline;
+  margin: 0.7vw;
+}
 /* Adjust display for mobile */
 @media only screen and (max-width: 768px) {
 }
