--- a/css/about.css
+++ b/css/about.css
@@ -1,13 +1,10 @@
 html {
-  /* --NavSeparatorWidth: 0.5vw;
-  --ArticleWidth: 60vw; */
-  /* scroll-behavior: smooth; */
   background-color: var(--BackgroundColor);
 }
 .about {
-  width: var(--ArticleWidth);
+  width: var(--ColumnWidth);
   margin-top: 10vh;
-  margin-left: calc( (100vw - var(--ArticleWidth)) / 2);
+  margin-left: calc( (100vw - var(--ColumnWidth)) / 2);
   background-color: var(--BackgroundColor);
   color: var(--FontColor);
   font-size: 1.8vw;
@@ -15,9 +12,9 @@ html {
   /* position: fixed;
   top: 20vh; */
 }
-@media only screen and (max-width: 768px) {
-  .about {
-   width: 80vw;
-   margin-left: 10vw;
+/* @media only screen and (max-width: 768px) {
+   .about {
+     width: 80vw;
+     margin-left: 10vw;
   }
-}
+} */
