--- a/css/master.css
+++ b/css/master.css
@@ -3,12 +3,9 @@
   --FontColor: rgb(255, 255, 255);
   --FancyColor: rgb(73, 201, 35);
   --HighlightColor: rgb(230, 197, 26);
-  scroll-behavior: smooth;
-}
-
-html {
+  --ColumnWidth: 60vw;
   --NavSeparatorWidth: 0.5vw;
-  --ArticleWidth: 60vw;
+  scroll-behavior: smooth;
 }
 a {
   text-decoration: none;
@@ -47,14 +44,12 @@ a {
   margin: 0;
 }
 .credentials {
-  /* display: none; */
-  width: 20vw; /*var(--ArticleWidth);*/
+  width: 20vw;
   /* position: -webkit-sticky;
   position: sticky; */
   position: fixed;
   bottom: 2vh;
   margin-left: 40vw;
-  /* margin-left: calc( (100vw - var(--ArticleWidth)) / 2); */
 }
 .credentials-content {
   text-align: center;
@@ -87,10 +82,13 @@ a {
 
 /* Adjust display for mobile */
 @media only screen and (max-width: 768px) {
+  :root {
+    --ColumnWidth: 80vw;
+  }
   .navbar {
     padding: 0;
   }
   .navbar-item {
-    font-size: 3.5vw;
+    font-size: 3vw;
   }
 }
