--- a/css/webapps.css
+++ b/css/webapps.css
@@ -1,13 +1,10 @@
 body {
-  /* --BackgroundColor: rgb(0, 0, 0); */
-  /* --FancyColor: rgb(252, 226, 20); */
   --FancyColor_selected: rgb(140, 21, 191);
   --BorderColor: rgb(121, 121, 121);
-  --grid_width: 60vw;
+  --grid_width: var(--ColumnWidth);
   --grid_item_margin: calc(0.02 * var(--grid_width));
   --grid_item_border_width: calc(0.01 * var(--grid_width));
   --grid_item_width: calc(0.5 * (var(--grid_width) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
-  /* --FontColor: rgb(255, 255, 255); */
   background-color: var(--BackgroundColor);
   margin: 0;
   padding: 0;
