--- a/css/master.css
+++ b/css/master.css
@@ -3,6 +3,7 @@
   --FontColor: rgb(255, 255, 255);
   --FancyColor: rgb(73, 201, 35);
   --HighlightColor: rgb(230, 197, 26);
+  --TextFontSize: 1.8vw;
   --ColumnWidth: 60vw;
   --NavSeparatorWidth: 0.5vw;
   scroll-behavior: smooth;
@@ -11,10 +12,16 @@ a {
   text-decoration: none;
   color: var(--FancyColor);
 }
-.navbar {
+.navbar-container {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+}
+.navbar {
+  /* position: -webkit-sticky;
+  position: sticky;
+  top: 0; */
+  margin-top: 5vh;
   text-align: center;
   background-color: var(--BackgroundColor);
 }
@@ -44,18 +51,17 @@ a {
   margin: 0;
 }
 .credentials {
-  width: 20vw;
-  /* position: -webkit-sticky;
-  position: sticky; */
+  --container-width: 20vw;
+  width: var(--container-width);
   position: fixed;
-  bottom: 2vh;
-  margin-left: 40vw;
+  bottom: 3vh;
+  margin-left: calc((100vw - var(--container-width)) / 2);
 }
 .credentials-content {
   text-align: center;
   background-color: var(--BackgroundColor);
   color: var(--FontColor);
-  font-size: 1vw;
+  font-size: 1.3vw;
 }
 .code-symbol {
   color: var(--FancyColor);
@@ -84,11 +90,18 @@ a {
 @media only screen and (max-width: 768px) {
   :root {
     --ColumnWidth: 80vw;
-  }
-  .navbar {
-    padding: 0;
+    --TextFontSize: 3vw;
   }
   .navbar-item {
     font-size: 3vw;
+  }
+  .credentials {
+    --container-width: 30vw;
+  }
+  .credentials-content {
+    font-size: 2vw;
+  }
+  .code-symbol {
+    font-size: 3.5vw;
   }
 }
