--- a/css/blog.css
+++ b/css/blog.css
@@ -2,6 +2,9 @@ html {
   background-color: var(--BackgroundColor);
   color: var(--FontColor);
 }
+#blog {
+  color: var(--NavBarActiveColor);
+}
 h1 {
   text-align: center;
   font-size: 3vw;
