--- a/css/about.css
+++ b/css/about.css
@@ -13,6 +13,10 @@ html {
   font-size: var(--TextFontSize);
   text-align: justify;
 }
+.credentials {
+  position: static;
+  margin-bottom: 3vh;
+}
 /* @media only screen and (max-width: 768px) {
    .about {
      font-size:
