--- a/css/contact.css
+++ b/css/contact.css
@@ -17,9 +17,10 @@ h1 {
 }
 .contact-logo {
   width: 10vw;
+  margin: 3vw;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) and (orientation: portrait){
   .contact-info {
     font-size: 4vw;
     margin-top: 15vh;
