--- a/css/about.css
+++ b/css/about.css
@@ -15,7 +15,7 @@ html {
 }
 
 @media only screen and (max-width: 768px) and (orientation: landscape) {
-  .credentials {
+  .credits {
     position: static;
     margin-bottom: 3vh;
 }
