--- a/css/master.css
+++ b/css/master.css
@@ -10,6 +10,9 @@
   --TopMarginToHeader: 8vh;
   scroll-behavior: smooth;
 }
+/* body {
+   transition: opacity .5s;
+} */
 html, body {
   margin: 0;
   padding:0;
@@ -36,6 +39,14 @@ a {
   margin-bottom: 0.5vw;
   display: inline-block;
 }
+.navbar-item-2 {
+  /* text-decoration: none; */
+  color: var(--FontColor);
+  font-size: 2.5vw;
+  text-align: center;
+  margin-bottom: 0.5vw;
+  display: inline-block;
+}
 .vertical-bar {
   display: inline-block;
   color: var(--FancyColor);
@@ -50,7 +61,7 @@ a {
   display: inline-block;
   margin: 0;
 }
-.credentials {
+.credits {
   --container-width: 20vw;
   width: var(--container-width);
   /* height: 3vh; */
@@ -58,7 +69,7 @@ a {
   bottom: 3vh;
   margin-left: calc((100vw - var(--container-width)) / 2);
 }
-.credentials-content {
+.credits-content {
   text-align: center;
   background-color: var(--BackgroundColor);
   color: var(--FontColor);
@@ -99,10 +110,10 @@ a {
   .vertical-bar {
     font-size: 2.5vw;
   }
-  .credentials {
+  .credits {
     --container-width: 30vw;
   }
-  .credentials-content {
+  .credits-content {
     font-size: 2vw;
   }
   .code-symbol {
