--- a/css/master.css
+++ b/css/master.css
@@ -10,9 +10,11 @@
   --TopMarginToHeader: 8vh;
   scroll-behavior: smooth;
 }
-/* body {
-   transition: opacity .5s;
-} */
+body {
+   transition: opacity 1s;
+   opacity: 0;
+   background-color: var(--BackgroundColor);
+}
 html, body {
   margin: 0;
   padding:0;
@@ -32,16 +34,6 @@ a {
   background-color: var(--BackgroundColor);
 }
 .navbar-item {
-  text-decoration: none;
-  color: var(--FontColor);
-  font-size: 2.5vw;
-  text-align: center;
-  margin-bottom: 0.5vw;
-  display: inline-block;
-  cursor: pointer;
-}
-.navbar-item-2 {
-  /* text-decoration: none; */
   color: var(--FontColor);
   font-size: 2.5vw;
   text-align: center;
