--- a/css/about.css
+++ b/css/about.css
@@ -12,8 +12,8 @@
   text-align: justify;
 }
 
-@media only screen and (max-width: 768px) and (orientation: landscape) {
+@media only screen and (max-width: 768px) { /*and (orientation: landscape) { */
   .credits {
     position: static;
-    margin-bottom: 3vh;
+    margin-top: 5vh;
 }
