--- a/css/master.css
+++ b/css/master.css
@@ -23,6 +23,33 @@ a {
   text-decoration: none;
   color: var(--FancyColor);
 }
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+#content-wrap {
+  padding-top: 5vh;
+  padding-bottom: 10vh;    /* Footer height */
+}
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 10vh;            /* Footer height */
+}
+#footer-content {
+  text-align: center;
+  background-color: var(--BackgroundColor);
+  color: var(--FontColor);
+  font-size: 1.3vw;
+}
+.footer-code-symbol {
+  color: var(--FancyColor);
+  font-size: 2.5vw;
+  display: inline-block;
+  font-family: monospace;
+}
+
 #menu {
   display: none;
 }
@@ -32,7 +59,6 @@ a {
   top: 0;
 }
 .navbar {
-  margin-top: 5vh;
   text-align: center;
   background-color: var(--BackgroundColor);
 }
@@ -61,25 +87,7 @@ a {
 .burguer-bracket, .nav-burguer-meat, #burger-meat-container #burguer-menu {
   display: none;
 }
-.credits {
-  --container-width: 100vw;
-  width: var(--container-width);
-  position: absolute;
-  bottom: 3vh;
-  margin-left: calc((100vw - var(--container-width)) / 2);
-}
-.credits-content {
-  text-align: center;
-  background-color: var(--BackgroundColor);
-  color: var(--FontColor);
-  font-size: 1.3vw;
-}
-.code-symbol {
-  color: var(--FancyColor);
-  font-size: 2.5vw;
-  display: inline-block;
-  font-family: monospace;
-}
+
 /* Scroll bar */
 ::-webkit-scrollbar {
   width: 1vw;
@@ -103,10 +111,10 @@ a {
     --ColumnWidth: 80vw;
     --TextFontSize: 2.8vw;
   }
-  .credits-content {
+  #footer-content {
     font-size: 3vw;
   }
-  .code-symbol {
+  .footer-code-symbol {
     font-size: 3.5vw;
   }
   .navbar {
@@ -130,7 +138,7 @@ a {
   #burguer-menu {
     display: block;
     margin-left: 5vh;
-    margin-top: 10vw;
+    /* margin-top: 10vw; */
     cursor: pointer;
   }
   input:checked ~ .navbar {
@@ -157,9 +165,9 @@ a {
 
 @media only screen and (max-width: 768px) and (orientation: landscape) {
   .navbar-item {
-    font-size: 1.5em;
+    font-size: 2.5vw;
   }
-  .credits-content {
+  #footer-content {
     font-size: 1.6vw;
   }
 }
