--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,11 @@ body {
   left: 45vw;
   width: 12vw;
   height: auto;
+  animation: mylogo-animation 4s;
+}
+@keyframes mylogo-animation {
+  from {opacity: 0;}
+  to {opacity: 1;}
 }
 @media only screen and (max-width: 768px) and (orientation: portrait) {
   #mylogo {
